# deteksi_apd_next

./: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  app.py  cctv.py  config.json  export_pt.py  flask_app.py  inspect_model.py  inspect_model_v2.py  main.ipynb  requirements.txt  streamlit_app.py
apd_detector_rust/: .gitignore  CONFIG.md  Cargo.toml  DOCS.md  INDEX.md  QUICKSTART.md  README.md  READY.md  SETUP.md  build_error_3.txt  build_error_3_utf8.txt  build_error_4.txt  build_error_4_utf8.txt  build_final_error.txt  build_final_error_utf8.txt  build_final_error_v10.txt  build_final_error_v10_utf8.txt  build_final_error_v11.txt  build_final_error_v11_utf8.txt  build_final_error_v12.txt  build_final_error_v12_utf8.txt  build_final_error_v13.txt  build_final_error_v13_utf8.txt  build_final_error_v14.txt  build_final_error_v14_utf8.txt  build_final_error_v15.txt  build_final_error_v15_utf8.txt  build_final_error_v16.txt  build_final_error_v16_utf8.txt  build_final_error_v2.txt  build_final_error_v2_utf8.txt  build_final_error_v3.txt  build_final_error_v3_utf8.txt  build_final_error_v4.txt  build_final_error_v4_utf8.txt  build_final_error_v5.txt  build_final_error_v5_utf8.txt  build_final_error_v6.txt  build_final_error_v6_utf8.txt  build_final_error_v7.txt  (+12 more)
apd_detector_rust/examples/: advanced.rs
apd_detector_rust/src/: detector.rs  error.rs  main.rs  processor.rs  utils.rs
data/: embeddings.json
data/records/: Alif_records.json
passed/: data.json
passed/2026-02-25/: data.json
templates/: index.html
violations/: data.json
(+1 files in other folders)
