[package]
name = "apd_detector"
version = "0.1.0"
edition = "2021"

[dependencies]
ort = { version = "2.0.0-rc.12", features = ["download-binaries", "ndarray"] }
ndarray = "0.15"
opencv = { version = "0.91", features = ["imgproc", "highgui", "videoio"] }
image = "0.24"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

[[bin]]
name = "apd_detector"
path = "src/main.rs"
